<resources>
    <string name="app_name">MovieSubmission3</string>
    <string name="movie_fragment">Movie</string>
    <string name="tv_show_fragment">TV Show</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="most_popular_movie">Most Popular Movies</string>
    <string name="see_all">SEE ALL</string>
    <string name="poster_movie">poster_movie</string>
    <string name="release_date">Release Date:</string>
    <string name="original_language">Original Language:</string>
    <string name="overview">Overview</string>
    <string name="add_to_playlist">ADD PLAYLIST</string>
    <string name="vote">/10</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="most_popular_tv_show">Most Popular TV Show</string>
    <string name="poster_tv_show">Poster Tv Show</string>
</resources>
